--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
 
     <div class="container fade-in">
-        <img src="\media\index\IMG_20241005_230910_065.png" alt="Votre Photo">
+        <img src="\media\IMG_20241005_230910_065.png" alt="Votre Photo">
         <h1>Votre Prénom</h1>
         <p>Bienvenue sur mon portfolio !</p>
     </div>
