--- a/frise.html
+++ b/frise.html
@@ -29,27 +29,27 @@
             <div class="timeline-event" onclick="location.href='page1.html'">
                 <span class="timeline-date">2016 -2018</span>
                 <span class="timeline-content">Super Mario 64</span>
-                <img src="D:\Site\media\frise\mario.png">
+                <img src="media\mario.png">
             </div>
             <div class="timeline-event" onclick="location.href='page2.html'">
                 <span class="timeline-date">2018 - 2021</span>
                 <span class="timeline-content">Call of Duty : World at War</span>
-                <img src="D:\Site\media\frise\codwaw.jpg">
+                <img src="media\codwaw.jpg">
             </div>
             <div class="timeline-event" onclick="location.href='page3.html'">
                 <span class="timeline-date">2020</span>
                 <span class="timeline-content">Début de la 3D</span>
-                <img src="D:\Site\media\frise\blender.png" alt="Votre Photo">
+                <img src="media\blender.png">
             </div>
             <div class="timeline-event" onclick="location.href='page3.html'">
                 <span class="timeline-date">2023 - 2024</span>
                 <span class="timeline-content">3 Axes</span>
-                <img src="D:\Site\media\frise\3axes.png" alt="Votre Photo">
+                <img src="media\3axes.png">
             </div>
             <div class="timeline-event" onclick="location.href='page3.html'">
                 <span class="timeline-date">2024 - Now</span>
                 <span class="timeline-content">YNOV</span>
-                <img src="D:\Site\media\frise\ynov.png" alt="Votre Photo">
+                <img src="media\ynov.png">
             </div>
         </div>
     </section>
