--- a/galerie.html
+++ b/galerie.html
@@ -18,31 +18,15 @@
         <div class="row"> 
             <div class="column">
                 <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
                         <span class="column-content">Call of Duty : World at War</span>
                     </a>
                 </div>
 
                 <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
-                        <span class="column-content">Call of Duty : World at War</span>
-                    </a>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
-                        <span class="column-content">Call of Duty : World at War</span>
-                    </a>
-                </div>
-
-                <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
                         <span class="column-content">Call of Duty : World at War</span>
                     </a>
                 </div>
@@ -50,15 +34,15 @@
 
             <div class="column">
                 <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
                         <span class="column-content">Call of Duty : World at War</span>
                     </a>
                 </div>
 
                 <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
                         <span class="column-content">Call of Duty : World at War</span>
                     </a>
                 </div>
@@ -66,15 +50,31 @@
 
             <div class="column">
                 <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
                         <span class="column-content">Call of Duty : World at War</span>
                     </a>
                 </div>
 
                 <div class="column-event">
-                    <a href="D:\Site\media\index\IMG_20241005_230910_065.png">
-                        <img src="D:\Site\media\index\IMG_20241005_230910_065.png" style="width:100%">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
+                        <span class="column-content">Call of Duty : World at War</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column">
+                <div class="column-event">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
+                        <span class="column-content">Call of Duty : World at War</span>
+                    </a>
+                </div>
+
+                <div class="column-event">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" style="width:100%">
                         <span class="column-content">Call of Duty : World at War</span>
                     </a>
                 </div>
