--- a/frise.html
+++ b/frise.html
@@ -57,14 +57,14 @@
     <section id="projets" class="fade-in">
         <h2>Version Vidéo</h2>
         <video controls>
-            <source src="projet-video.mp4" type="video/mp4">
+            <source src="media\Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
             Votre navigateur ne supporte pas la lecture vidéo.
         </video>
     </section>
 
     <section id="contact" class="fade-in">
         <h2>Contact</h2>
-        <p>Pour me contacter, veuillez m'envoyer un message à <a href="mailto:votre-email@example.com">votre-email@example.com</a>.</p>
+        <a href="mailto:naim.nshou@gmail.com">naim.nshou@gmail.com</a>
     </section>
 
     <script src="frise.js"></script>
