--- a/galerie.html
+++ b/galerie.html
@@ -14,6 +14,12 @@
         <a href="#contact">Contact</a>
     </nav>
 
+    <div class="container fade-in">
+        <img src="media\IMG_20241005_230910_065.png" alt="Votre Photo">
+        <h1>Naïm Ben Amar</h1>
+        <p>Bienvenue sur mon portfolio !</p>
+    </div>
+    
     <section id="projets"  class="fade-in">
         <div class="row"> 
             <div class="column">
@@ -82,19 +88,9 @@
         </div>
     </section>
 
-
-    <section id="projets" class="fade-in">
-        <h2>Portfolio / Bande Démo</h2>
-        <video controls>
-            <source src="projet-video.mp4" type="video/mp4">
-            Votre navigateur ne supporte pas la lecture vidéo.
-        </video>
-        <a href="frise.html">Cliquez ici pour accèder au Portfolio Virtuel ici</a>
-    </section>
-
     <section id="contact" class="fade-in">
         <h2>Contact</h2>
-        <p>Pour me contacter, veuillez m'envoyer un message à <a href="mailto:votre-email@example.com">votre-email@example.com</a>.</p>
+        <a href="mailto:naim.nshou@gmail.com">naim.nshou@gmail.com</a>
     </section>
 
     <script src="script.js"></script>
