--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 
     <div class="container fade-in">
         <img src="media\IMG_20241005_230910_065.png" alt="Votre Photo">
-        <h1>Votre Prénom</h1>
+        <h1>Naïm Ben Amar</h1>
         <p>Bienvenue sur mon portfolio !</p>
     </div>
 
     <section id="presentation" class="fade-in">
         <h2>Présentation</h2>
         <img src="presentation.jpg" alt="Image de présentation">
-        <p>Quelques mots pour vous présenter. Vous pouvez ajouter une description plus détaillée ici.</p>
+        <p>Depuis tout petit, j'ai toujours eu comme passion les jeux vidéo, alors tout naturellement, lorsque j'ai grandi, j'ai commencé à me questionner sur le développement des jeux vidéo ?</p>
         <a href="cv.html">Accèder au CV Virtuel ici</a>
     </section>
 
     <section id="projets" class="fade-in">
         <h2>Portfolio / Bande Démo</h2>
         <video controls>
-            <source src="projet-video.mp4" type="video/mp4">
+            <source src="media\Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
             Votre navigateur ne supporte pas la lecture vidéo.
         </video>
         <a href="frise.html">Cliquez ici pour accèder au Portfolio Virtuel ici</a>
@@ -38,7 +38,7 @@
 
     <section id="contact" class="fade-in">
         <h2>Contact</h2>
-        <p>Pour me contacter, veuillez m'envoyer un message à <a href="mailto:votre-email@example.com">votre-email@example.com</a>.</p>
+        <a href="mailto:naim.nshou@gmail.com">naim.nshou@gmail.com</a>
     </section>
 
     <script src="script.js"></script>
