--- a/frise.html
+++ b/frise.html
@@ -37,7 +37,7 @@
                 <img src="media\codwaw.jpg">
             </div>
             <div class="timeline-event" onclick="location.href='page3.html'">
-                <span class="timeline-date">2020</span>
+                <span class="timeline-date">2020 - Now</span>
                 <span class="timeline-content">Début de la 3D</span>
                 <img src="media\blender.png">
             </div>
