--- a/galerie.html
+++ b/galerie.html
@@ -15,7 +15,7 @@
     </nav>
 
     <section id="timeline2" class="fade-in">
-        <h2>N</h2>
+        <h2>Galerie</h2>
         <div class="timeline2">
             <div class="timeline-event2" onclick="location.href='page1.html'">
                 <span class="timeline-date2">Commencer !</span>
