--- a/galerie.html
+++ b/galerie.html
@@ -25,75 +25,98 @@
 
         <div id="myBtnContainer">
             <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-            <button class="btn" onclick="filterSelection('nature')"> Nature</button>
-            <button class="btn" onclick="filterSelection('cars')"> Cars</button>
-            <button class="btn" onclick="filterSelection('people')"> People</button>
+            <button class="btn" onclick="filterSelection('2016')"> 2016</button>
+            <button class="btn" onclick="filterSelection('2017')"> 2017</button>
+            <button class="btn" onclick="filterSelection('2018')"> 2018</button>
+            <button class="btn" onclick="filterSelection('2019')"> 2019</button>
+            <button class="btn" onclick="filterSelection('2020')"> 2020</button>
+            <button class="btn" onclick="filterSelection('2021')"> 2021</button>
+            <button class="btn" onclick="filterSelection('2022')"> 2022</button>
+            <button class="btn" onclick="filterSelection('2023')"> 2023</button>
+            <button class="btn" onclick="filterSelection('2024')"> 2024</button>
+            <button class="btn" onclick="filterSelection('2025')"> 2025</button>
         </div>
 
     <section id="galerie" class="fade-in">
         <div class="row">
-            <div class="column nature">
+            <div class="column 2016">
                 <div class="content">
-                    <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                    <h4>Mountains</h4>
-                    <p>Lorem ipsum dolor..</p>
-                </div>
-            </div>
-            <div class="column nature">
-                <div class="content">
-                    <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-                    <h4>Lights</h4>
-                    <p>Lorem ipsum dolor..</p>
-                </div>
-            </div>
-            <div class="column nature">
-                <div class="content">
-                    <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-                    <h4>Forest</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>Mountains</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
   
-            <div class="column cars">
+            <div class="column 2017">
                 <div class="content">
                     <img src="/w3images/cars1.jpg" alt="Car" style="width:100%">
                     <h4>Retro</h4>
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
-            <div class="column cars">
-                <div class="content">
-                    <img src="/w3images/cars2.jpg" alt="Car" style="width:100%">
-                    <h4>Fast</h4>
-                    <p>Lorem ipsum dolor..</p>
-                </div>
-            </div>
-            <div class="column cars">
-                <div class="content">
-                    <img src="/w3images/cars3.jpg" alt="Car" style="width:100%">
-                    <h4>Classic</h4>
-                    <p>Lorem ipsum dolor..</p>
-                </div>
-            </div>
 
-            <div class="column people">
+            <div class="column 2018">
                 <div class="content">
                     <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
                     <h4>Girl</h4>
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
-            <div class="column people">
+
+            <div class="column 2019">
                 <div class="content">
-                    <img src="/w3images/people2.jpg" alt="Car" style="width:100%">
-                    <h4>Man</h4>
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
-            <div class="column people">
+
+            <div class="column 2020">
                 <div class="content">
-                    <img src="/w3images/people3.jpg" alt="Car" style="width:100%">
-                    <h4>Woman</h4>
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+
+            <div class="column 2021">
+                <div class="content">
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+
+            <div class="column 2022">
+                <div class="content">
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+
+            <div class="column 2023">
+                <div class="content">
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+
+            <div class="column 2024">
+                <div class="content">
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
+                    <p>Lorem ipsum dolor..</p>
+                </div>
+            </div>
+
+            <div class="column 2025">
+                <div class="content">
+                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <h4>Girl</h4>
                     <p>Lorem ipsum dolor..</p>
                 </div>
             </div>
