--- a/galerie.html
+++ b/galerie.html
@@ -14,13 +14,9 @@
         <a href="#contact">Contact</a>
     </nav>
 
-    <section id="timeline2" class="fade-in">
+    <section id="titre" class="fade-in">
         <h2>Galerie</h2>
-        <div class="timeline2">
-            <div class="timeline-event2" onclick="location.href='page1.html'">
-                <span class="timeline-date2">Commencer !</span>
-            </div>
-        </div>
+        <p>Galerie des projets images / vidéos</p>
     </section>
 
         <div id="myBtnContainer">
@@ -59,7 +55,7 @@
 
             <div class="column 2018">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
+                    <img src="media\codwaw.jpg" alt="Car" style="width:100%">
                     <h4>2018</h4>
                     <p>Lorem ipsum dolor..</p>
                 </div>
