--- a/galerie.html
+++ b/galerie.html
@@ -9,8 +9,7 @@
 <body>
     <nav>
         <a href="index.html">Accueil</a>
-        <a href="#timeline">Version Vidéo</a>
-        <a href="galerie.html">Galerie</a>
+        <a href="frise.html">Version Vidéo</a>
         <a href="#contact">Contact</a>
     </nav>
 
@@ -47,7 +46,7 @@
   
             <div class="column 2017">
                 <div class="content">
-                    <img src="/w3images/cars1.jpg" alt="Car" style="width:100%">
+                    <img src="media\blender.png" alt="Car" style="width:100%">
                     <h4>2017</h4>
                     <p>Lorem ipsum dolor..</p>
                 </div>
