--- a/galerie.html
+++ b/galerie.html
@@ -46,73 +46,90 @@
   
             <div class="column 2017">
                 <div class="content">
-                    <img src="media\blender.png" alt="Car" style="width:100%">
-                    <h4>2017</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2017</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2018">
                 <div class="content">
-                    <img src="media\codwaw.jpg" alt="Car" style="width:100%">
-                    <h4>2018</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2018</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2019">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2019</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2019</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2020">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2020</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2020</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2021">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2021</h4>
-                    <p>Lorem ipsum dolor..</p>
-                </div>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2021</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>                </div>
             </div>
 
             <div class="column 2022">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2022</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2022</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2023">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2023</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2023</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2024">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2024</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2024</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 
             <div class="column 2025">
                 <div class="content">
-                    <img src="/w3images/people1.jpg" alt="Car" style="width:100%">
-                    <h4>2025</h4>
-                    <p>Lorem ipsum dolor..</p>
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>2025</h4>
+                        <p>Lorem ipsum dolor..</p>
+                    </a>
                 </div>
             </div>
 <!-- END GRID -->
