--- a/galerie.html
+++ b/galerie.html
@@ -20,115 +20,114 @@
 
         <div id="myBtnContainer">
             <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-            <button class="btn" onclick="filterSelection('2016')"> 2016</button>
-            <button class="btn" onclick="filterSelection('2017')"> 2017</button>
-            <button class="btn" onclick="filterSelection('2018')"> 2018</button>
-            <button class="btn" onclick="filterSelection('2019')"> 2019</button>
-            <button class="btn" onclick="filterSelection('2020')"> 2020</button>
-            <button class="btn" onclick="filterSelection('2021')"> 2021</button>
-            <button class="btn" onclick="filterSelection('2022')"> 2022</button>
-            <button class="btn" onclick="filterSelection('2023')"> 2023</button>
-            <button class="btn" onclick="filterSelection('2024')"> 2024</button>
-            <button class="btn" onclick="filterSelection('2025')"> 2025</button>
+            <button class="btn" onclick="filterSelection('SM64:TLS')"> Super Mario 64: The Lost Stars</button>
+            <button class="btn" onclick="filterSelection('CodWaWZ')"> Call of Duty: World at War Zombies</button>
+            <button class="btn" onclick="filterSelection('SFM')"> Source Filmmaker</button>
+            <button class="btn" onclick="filterSelection('C4D')"> Cinema 4D</button>
+            <button class="btn" onclick="filterSelection('Bld')"> Blender</button>
+            <button class="btn" onclick="filterSelection('SM64D')"> Super Mario 64: Decompiled</button>
+            <button class="btn" onclick="filterSelection('SP')"> Substance Painter</button>
+            <button class="btn" onclick="filterSelection('Maya')"> Maya</button>
+            <button class="btn" onclick="filterSelection('AE')"> After Effects</button>
         </div>
 
     <section id="galerie" class="fade-in">
         <div class="row">
-            <div class="column 2016">
+            <div class="column SM64:TLS">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2016</h4>
-                        <p>Lorem ipsum dolor..</p>
-                    </a>
-                </div>
-            </div>
-  
-            <div class="column 2017">
-                <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2017</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Super Mario 64: The Lost Stars</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2018">
+            <div class="column CodWaWZ">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2018</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Call of Duty: World at War Zombies</h4>
+                        <p>Call of Duty: World at War</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2019">
+            <div class="column SFM">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2019</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Source Filmmaker</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2020">
+            <div class="column C4D">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2020</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Cinema 4D</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2021">
+            <div class="column Bld">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2021</h4>
-                        <p>Lorem ipsum dolor..</p>
-                    </a>                </div>
-            </div>
-
-            <div class="column 2022">
-                <div class="content">
-                    <a href="media\IMG_20241005_230910_065.png">
-                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2022</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Blender</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2023">
+            <div class="column SM64D">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2023</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Super Mario 64 : Decompiled</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2024">
+            <div class="column SP">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2024</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Substance Painter</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
 
-            <div class="column 2025">
+            <div class="column Maya">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
                         <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
-                        <h4>2025</h4>
-                        <p>Lorem ipsum dolor..</p>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Maya</p>
+                        <p>2016</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="column AE">
+                <div class="content">
+                    <a href="media\IMG_20241005_230910_065.png">
+                        <img src="media\IMG_20241005_230910_065.png" alt="Mountains" style="width:100%">
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>After Effects</p>
+                        <p>2016</p>
                     </a>
                 </div>
             </div>
