--- a/galerie.html
+++ b/galerie.html
@@ -44,6 +44,20 @@
                 </div>
             </div>
 
+            <div class="column SM64:TLS">
+                <div class="content">
+                    <a href="media\Portfolio_Naim_Ben_Amar.mp4">
+                        <video controls>
+                            <source src="media\Portfolio_Naim_Ben_Amar.mp4" type="video/mp4">
+                            Votre navigateur ne supporte pas la lecture vidéo.
+                        </video>
+                        <h4>Super Mario 64: The Lost Stars</h4>
+                        <p>Super Mario 64: The Lost Stars</p>
+                        <p>2016</p>
+                    </a>
+                </div>
+            </div>
+
             <div class="column CodWaWZ">
                 <div class="content">
                     <a href="media\IMG_20241005_230910_065.png">
